--- a/style.css
+++ b/style.css
@@ -26,4 +26,26 @@ section {
    background-image: url('img/4965007.jpg');
    background-size: cover;
    background-position: right;
+   border-radius: 80px;
+   width:100% ;
+   height: 600px;
+   padding: 40px;
+   margin: 0 auto;
+}
+/*posicionamento para a imagem a direita*/
+.img-inicio {
+ position: absolute;
+ right: 0;
+ top:18rem;
+ width:45rem;
+ height: auto;
+}
+.esquerda-conteudo {
+   display: flex;
+   flex-direction: flex-start;
+   gap:1rem;
+}
+
+.botao-inicio {
+   
 }
